force-app/main/default/objects/Assignment__c/fields/Max_Marks__c.field-meta.xml
<CustomField>
    <fullName>Max_Marks__c</fullName>
    <inlineHelpText>Maximum marks for the assignment</inlineHelpText>
    <label>Max Marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>