force-app/main/default/objects/Assignment__c/validationRules/Assignment_DueDate_NotBeforeCreated.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_DueDate_NotBeforeCreated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Due_Date__c)),
  Due_Date__c &lt; DATEVALUE(CreatedDate)
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be earlier than the Assignment creation date.</errorMessage>
</ValidationRule>