force-app/main/default/objects/Assignment__c/validationRules/Assignment_MaxMarks_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_MaxMarks_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Max_Marks__c),
  Max_Marks__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Max_Marks__c</errorDisplayField>
    <errorMessage>Max Marks must be greater than 0.</errorMessage>
</ValidationRule>