force-app/main/default/objects/Assignment__c/validationRules/Assignment_Requires_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Requires_Course</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Course__c)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Assignment must be linked to a Course.</errorMessage>
</ValidationRule>